2008-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CombinedDomainXYPlot.java
    (draw): Reset fixed range axis space for subplots.

2008-01-18  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/xy/XIntervalSeriesCollection.java
	(removeSeries(int)): New method,
	(removeSeries(XIntervalSeries)): Likewise,
	(removeAllSeries): Likewise,
	* source/org/jfree/data/xy/XYIntervalSeriesCollection.java
	(removeSeries(int)): New method,
	(removeSeries(XYIntervalSeries)): Likewise,
	(removeAllSeries): Likewise,
	* source/org/jfree/data/xy/YIntervalSeriesCollection.java
	(removeSeries(int)): New method,
	(removeSeries(YIntervalSeries)): Likewise,
	(removeAllSeries): Likewise.

2008-01-18  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/time/TimeSeriesCollection.java
	(getSeries): Changed argument from String to Comparable.

2008-01-15  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1866446 (Rob Van der Sanden):
	* source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
	(maximumBarWidth): New field,
	(BoxAndWhiskerRenderer): Initialise new field,
	(getMaximumBarWidth): New method,
	(setMaximumBarWidth): Likewise,
	(equals): Updated for new field,
	* tests/org/jfree/chart/renderer/category/junit/BoxAndWhiskerRendererTests.java
	(testEquals): Updated to check new field.

2008-01-10  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 1864222:
	* source/org/jfree/data/time/TimeSeries.java
	(createCopy(RegularTimePeriod, RegularTimePeriod)): Handle empty range,
	* tests/org/jfree/data/time/junit/TimeSeriesTests.java
	(testBug1864222): New test method.

2008-01-10  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 1868521:
	* source/org/jfree/chart/ChartUtilities.java
	(writeChartAsJPEG): Create RGB image rather than ARGB.

----------  JFREECHART 1.0.9 RELEASED ------------------------
